--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.3.0",
+    "algoliasearch": "^4.11.0",
     "apollo-server-express": "^3.4.0",
     "graphql": "^15.6.1",
     "reflect-metadata": "^0.1.13",
