--- a/.github/workflows/ecr_ecs-deploy-dev.yaml
+++ b/.github/workflows/ecr_ecs-deploy-dev.yaml
@@ -49,7 +49,7 @@ jobs:
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
-          docker build -t ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} .
+          docker build --build-arg DATABASE_URL=${{ secrets.DATABASE_URL }} --build-arg ALGOLIA_API_KEY=${{ secrets.ALGOLIA_API_KEY }} --build-arg ALGOLIA_APP_ID=${{ secrets.ALGOLIA_APP_ID }} --build-arg ALGOLIA_INDEX_PREFIX=${{ secrets.ALGOLIA_INDEX_PREFIX }} -t ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} .
           docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY}}:${{ env.IMAGE_TAG }}
           echo "::set-output name=image::${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY}}:${{ env.IMAGE_TAG }}"
 
