ci(development): rename development to develop + update ci

--- a/.github/workflows/ecr_ecs-deploy-dev.yaml
+++ b/.github/workflows/ecr_ecs-deploy-dev.yaml
@@ -2,7 +2,7 @@ name: Deploy development to Amazon ECS
 
 on:
   push:
-    branches: [development]
+    branches: [develop]
 
 env:
   AWS_REGION: eu-west-2
