--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@prisma/client": "^3.3.0",
     "algoliasearch": "^4.11.0",
     "apollo-server-express": "^3.4.0",
+    "bcrypt": "^5.0.1",
     "graphql": "^15.6.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -51,6 +52,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
