Reconfigure ecr_ecs-deploy-dev.yaml

--- a/.github/workflows/ecr_ecs-deploy-dev.yaml
+++ b/.github/workflows/ecr_ecs-deploy-dev.yaml
@@ -72,4 +72,4 @@ jobs:
           service: ${{ env.ECS_SERVICE }}
           cluster: ${{ env.ECS_CLUSTER }}
           wait-for-service-stability: true
-          force-new-deployment: false
+          force-new-deployment: true
