--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@prisma/client": "^3.3.0",
     "algoliasearch": "^4.11.0",
     "apollo-server-express": "^3.4.0",
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "graphql": "^15.6.1",
     "passport": "^0.4.1",
