--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/google.maps": "^3.46.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
     "@types/passport-local": "^1.0.34",
