chore(1188): add lodash package

--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.3.0",
+    "@types/lodash": "^4.14.177",
     "algoliasearch": "^4.11.0",
     "apollo-server-express": "^3.4.0",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "graphql": "^15.6.1",
+    "lodash": "^4.17.21",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
