--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "graphql": "^15.6.1",
-    "passport": "^0.4.1",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
