--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@types/google.maps": "^3.46.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
-    "@types/passport-local": "^1.0.34",
+    "@types/passport-local": "1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
