feat(sendbird): add isFilled

--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "import:algolia:cities": "npx ts-node scripts/algolia/importCitys.ts",
+    "import:algolia:schools": "npx ts-node scripts/algolia/importSchools.ts",
+    "import:algolia:tags": "npx ts-node scripts/algolia/importTags.ts",
+    "import:algolia:users": "npx ts-node scripts/algolia/importUsers.ts"
   },
   "dependencies": {
     "@mailchimp/mailchimp_transactional": "^1.0.46",
