--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "apollo-server-express": "^3.4.0",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
+    "cache-manager": "3.6.0",
     "graphql": "^15.6.1",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
@@ -60,6 +61,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager": "3.4.2",
     "@types/express": "^4.17.13",
     "@types/google.maps": "^3.46.1",
     "@types/jest": "^27.0.1",
