--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "7.4.0",
-    "uuid": "^8.3.2"
+    "uuid": "8.3.2"
   },
   "lint-staged": {
     "*.{js,ts}": [
