--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "@nestjs/cli": "8.1.5",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/graphql": "^9.1.1",
+    "@nestjs/graphql": "9.1.2",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.3.0",
     "algoliasearch": "^4.11.0",
+    "apollo-server-core": "3.5.0",
     "apollo-server-express": "^3.4.0",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
