--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "cache-manager": "3.6.0",
     "class-transformer": "^0.4.0",
     "class-validator": "0.13.2",
+    "expo-server-sdk": "^3.6.0",
     "express": "4.17.1",
     "graphql": "^15.6.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "qs": "^6.10.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "7.4.0",
