--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "import:algolia:users": "npx ts-node scripts/algolia/importUsers.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.44.0",
+    "@aws-sdk/s3-request-presigner": "^3.44.0",
     "@mailchimp/mailchimp_transactional": "^1.0.46",
     "@nestjs/cli": "8.1.5",
     "@nestjs/common": "^8.0.0",
