--- a/.github/workflows/ecr_ecs-deploy-dev.yaml
+++ b/.github/workflows/ecr_ecs-deploy-dev.yaml
@@ -49,7 +49,7 @@ jobs:
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
-          docker build --build-arg AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} --build-arg SENDBIRD_BASE_URL=${{ secrets.SENDBIRD_BASE_URL }} --build-arg SENDBIRD_TOKEN=${{ secrets.SENDBIRD_TOKEN }} --build-arg DATABASE_URL=${{ secrets.DATABASE_URL }} --build-arg ALGOLIA_API_KEY=${{ secrets.ALGOLIA_API_KEY }} --build-arg ALGOLIA_APP_ID=${{ secrets.ALGOLIA_APP_ID }} --build-arg ALGOLIA_INDEX_PREFIX=${{ secrets.ALGOLIA_INDEX_PREFIX }} --build-arg EMAIL_PROVIDER_API_KEY=${{ secrets.EMAIL_PROVIDER_API_KEY }} -t ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} .
+          docker build --build-arg ALGOLIA_INDEX_PREFIX=${{ secrets.ALGOLIA_INDEX_PREFIX }} --build-arg AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} --build-arg SENDBIRD_BASE_URL=${{ secrets.SENDBIRD_BASE_URL }} --build-arg SENDBIRD_TOKEN=${{ secrets.SENDBIRD_TOKEN }} --build-arg DATABASE_URL=${{ secrets.DATABASE_URL }} --build-arg ALGOLIA_API_KEY=${{ secrets.ALGOLIA_API_KEY }} --build-arg ALGOLIA_APP_ID=${{ secrets.ALGOLIA_APP_ID }} --build-arg ALGOLIA_INDEX_PREFIX=${{ secrets.ALGOLIA_INDEX_PREFIX }} --build-arg EMAIL_PROVIDER_API_KEY=${{ secrets.EMAIL_PROVIDER_API_KEY }} -t ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} .
           docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY}}:${{ env.IMAGE_TAG }}
           echo "::set-output name=image::${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY}}:${{ env.IMAGE_TAG }}"
 
