--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "class-validator": "0.13.2",
     "expo-server-sdk": "^3.6.0",
     "express": "4.17.1",
+    "firebase-admin": "^10.0.1",
     "graphql": "^15.6.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
