--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cache-manager": "3.6.0",
     "class-transformer": "^0.4.0",
     "class-validator": "0.13.2",
+    "date-fns": "^2.28.0",
     "expo-server-sdk": "^3.6.0",
     "express": "4.17.1",
     "graphql": "^15.6.1",
