--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "dev": "nest start --watch",
+    "dev": "./node_modules/.bin/cross-env NODE_ENV=development DEBUG=@neo4j/graphql:execute nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -24,13 +24,19 @@
     "import:algolia:cities": "npx ts-node scripts/algolia/importCitys.ts",
     "import:algolia:schools": "npx ts-node scripts/algolia/importSchools.ts",
     "import:algolia:tags": "npx ts-node scripts/algolia/importTags.ts",
-    "import:algolia:users": "npx ts-node scripts/algolia/importUsers.ts"
+    "import:algolia:users": "npx ts-node scripts/algolia/importUsers.ts",
+    "neo:serve": "npx ts-node src/neo/serve.ts",
+    "neo:generate": "npx ts-node src/neo/generate.ts",
+    "prisma:studio": "npx prisma studio --experimental",
+    "prisma:generate": "npx prisma generate",
+    "prisma:generate:watch": "npx prisma generate --watch"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.44.0",
     "@aws-sdk/s3-request-presigner": "3.44.0",
     "@aws-sdk/signature-v4-crt": "3.41.0",
     "@mailchimp/mailchimp_transactional": "^1.0.46",
+    "@neo4j/graphql-ogm": "2.5.5",
     "@nestjs/cli": "8.1.5",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
@@ -39,7 +45,8 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@paljs/plugins": "4.0.13",
-    "@prisma/client": "^3.3.0",
+    "@prisma/client": "3.8.1",
+    "@types/date-fns": "^2.6.0",
     "algoliasearch": "^4.11.0",
     "apollo-server-core": "3.5.0",
     "apollo-server-express": "^3.4.0",
@@ -47,12 +54,15 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "0.13.2",
+    "date-fns": "2.25.0",
+    "dotenv": "14.2.0",
     "expo-server-sdk": "^3.6.0",
     "express": "4.17.1",
     "graphql": "^15.6.1",
+    "neo4j-driver": "4.4.0-beta02",
+    "nestjs-i18n": "^8.2.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
     "qs": "^6.10.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -76,10 +86,13 @@
     "@types/google.maps": "^3.46.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
-    "@types/passport-local": "1.0.34",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "apollo-server": "^3.6.2",
+    "cross-env": "^7.0.3",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -87,7 +100,7 @@
     "jest": "^27.2.5",
     "lint-staged": "^11.2.6",
     "prettier": "^2.3.2",
-    "prisma": "^3.3.0",
+    "prisma": "3.8.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
