--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prisma:generate:watch": "npx prisma generate --watch"
   },
   "dependencies": {
+    "@amplitude/node": "^1.9.2",
     "@aws-sdk/client-s3": "3.44.0",
     "@aws-sdk/s3-request-presigner": "3.44.0",
     "@aws-sdk/signature-v4-crt": "3.41.0",
