--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "dev": "./node_modules/.bin/cross-env NODE_ENV=development DEBUG=@neo4j/graphql:execute nest start --watch",
+    "dev": "NODE_ENV=development DEBUG=@neo4j/graphql:execute nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
