--- a/package.json
+++ b/package.json
@@ -38,13 +38,14 @@
     "@aws-sdk/signature-v4-crt": "3.41.0",
     "@mailchimp/mailchimp_transactional": "^1.0.46",
     "@neo4j/graphql-ogm": "2.5.5",
-    "@nestjs/cli": "8.1.5",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/graphql": "9.1.2",
-    "@nestjs/jwt": "^8.0.0",
-    "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/apollo": "10.0.5",
+    "@nestjs/cli": "8.2.1",
+    "@nestjs/common": "8.3.1",
+    "@nestjs/core": "8.3.1",
+    "@nestjs/graphql": "10.0.5",
+    "@nestjs/jwt": "8.0.0",
+    "@nestjs/passport": "8.2.1",
+    "@nestjs/platform-express": "8.3.1",
     "@paljs/plugins": "4.0.13",
     "@prisma/client": "3.8.1",
     "@types/date-fns": "^2.6.0",
