--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@nestjs/platform-express": "8.3.1",
     "@paljs/plugins": "4.0.13",
     "@prisma/client": "3.8.1",
+    "@tracworx/nestjs-dataloader": "^1.1.0",
     "@types/date-fns": "^2.6.0",
     "algoliasearch": "^4.11.0",
     "apollo-server-core": "3.5.0",
@@ -56,6 +57,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "0.13.2",
+    "dataloader": "^2.0.0",
     "date-fns": "2.25.0",
     "dotenv": "14.2.0",
     "expo-server-sdk": "^3.6.0",
