--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "graphql": "^15.6.1",
     "lodash": "^4.17.21",
     "neo4j-driver": "4.4.0-beta02",
+    "nestjs-http-promise": "^1.2.1",
     "nestjs-i18n": "^8.2.2",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
