--- a/package.json
+++ b/package.json
@@ -97,11 +97,12 @@
     "@types/supertest": "^2.0.11",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/parser": "^5.15.0",
     "apollo-server": "^3.6.2",
     "cross-env": "^7.0.3",
-    "eslint": "^8.0.1",
+    "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-functional": "^4.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "jest": "^27.2.5",
@@ -114,6 +115,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
+    "tsutils": "^3.21.0",
     "typescript": "^4.3.5",
     "webpack": "5.65.0"
   },
