--- a/package.json
+++ b/package.json
@@ -45,14 +45,14 @@
     "@nestjs/graphql": "10.0.5",
     "@nestjs/jwt": "8.0.0",
     "@nestjs/passport": "8.2.1",
-    "@nestjs/platform-express": "8.3.1",
+    "@nestjs/platform-fastify": "^8.4.1",
     "@paljs/plugins": "4.0.13",
     "@prisma/client": "3.8.1",
     "@tracworx/nestjs-dataloader": "^1.1.0",
     "@types/date-fns": "^2.6.0",
     "algoliasearch": "^4.11.0",
     "apollo-server-core": "3.5.0",
-    "apollo-server-express": "^3.4.0",
+    "apollo-server-fastify": "^3.6.4",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
@@ -61,7 +61,6 @@
     "date-fns": "2.25.0",
     "dotenv": "14.2.0",
     "expo-server-sdk": "^3.6.0",
-    "express": "4.17.1",
     "graphql": "^15.6.1",
     "lodash": "^4.17.21",
     "neo4j-driver": "4.4.0-beta02",
@@ -88,7 +87,6 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
     "@types/google.maps": "^3.46.1",
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.178",
