--- a/package.json
+++ b/package.json
@@ -51,8 +51,9 @@
     "@tracworx/nestjs-dataloader": "^1.1.0",
     "@types/date-fns": "^2.6.0",
     "algoliasearch": "^4.11.0",
+    "apollo-server": "^3.6.5",
     "apollo-server-core": "3.5.0",
-    "apollo-server-fastify": "^3.6.4",
+    "apollo-server-fastify": "^3.6.5",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
@@ -61,6 +62,7 @@
     "date-fns": "2.25.0",
     "dotenv": "14.2.0",
     "expo-server-sdk": "^3.6.0",
+    "fastify": "^3.27.4",
     "graphql": "^15.6.1",
     "lodash": "^4.17.21",
     "neo4j-driver": "4.4.0-beta02",
@@ -96,7 +98,6 @@
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.15.0",
-    "apollo-server": "^3.6.2",
     "cross-env": "^7.0.3",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.3.0",
