--- a/package.json
+++ b/package.json
@@ -45,14 +45,15 @@
     "@nestjs/graphql": "10.0.5",
     "@nestjs/jwt": "8.0.0",
     "@nestjs/passport": "8.2.1",
-    "@nestjs/platform-express": "8.3.1",
+    "@nestjs/platform-fastify": "^8.4.1",
     "@paljs/plugins": "4.0.13",
     "@prisma/client": "3.8.1",
     "@tracworx/nestjs-dataloader": "^1.1.0",
     "@types/date-fns": "^2.6.0",
     "algoliasearch": "^4.11.0",
+    "apollo-server": "^3.6.5",
     "apollo-server-core": "3.5.0",
-    "apollo-server-express": "^3.4.0",
+    "apollo-server-fastify": "^3.6.5",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
@@ -61,7 +62,7 @@
     "date-fns": "2.25.0",
     "dotenv": "14.2.0",
     "expo-server-sdk": "^3.6.0",
-    "express": "4.17.1",
+    "fastify": "^3.27.4",
     "graphql": "^15.6.1",
     "lodash": "^4.17.21",
     "neo4j-driver": "4.4.0-beta02",
@@ -88,7 +89,6 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
     "@types/google.maps": "^3.46.1",
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.178",
@@ -97,11 +97,11 @@
     "@types/supertest": "^2.0.11",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "apollo-server": "^3.6.2",
+    "@typescript-eslint/parser": "^5.15.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.0.1",
+    "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-functional": "^4.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "jest": "^27.2.5",
@@ -114,6 +114,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
+    "tsutils": "^3.21.0",
     "typescript": "^4.3.5",
     "webpack": "5.65.0"
   },
