--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "@nestjs/jwt": "8.0.0",
     "@nestjs/passport": "8.2.1",
     "@nestjs/platform-fastify": "^8.4.1",
-    "@paljs/plugins": "4.0.13",
     "@prisma/client": "3.8.1",
     "@tracworx/nestjs-dataloader": "^1.1.0",
     "@types/date-fns": "^2.6.0",
@@ -56,8 +55,8 @@
     "apollo-server-fastify": "^3.6.5",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
-    "class-transformer": "^0.4.0",
-    "class-validator": "0.13.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dataloader": "^2.0.0",
     "date-fns": "2.25.0",
     "dotenv": "14.2.0",
