--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "lint-staged": "^11.2.6",
     "prettier": "^2.3.2",
     "prisma": "3.8.1",
+    "sql-formatter": "^4.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
