chore(2332): backend: postgres migration (#188)
Co-authored-by: Anibal <hey@anib.al>

--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
+DATABASE_URL= postgresql://admin:admin@localhost:5432/yelly?schema=public
 #DATABASE_URL=mysql://root:root@127.0.0.1:8889/yelly?serverVersion=5.6
 DATABASE_URL="mysql://user:password@domain:port/dbname"
 ALGOLIA_API_KEY=ALGOLIA_API_KEY
