--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
     "dev": "NODE_ENV=development DEBUG=@neo4j/graphql:execute nest start --watch",
+    "dev:docker:up": "docker compose -f docker-compose.dev.yml --env-file .env.docker.dev up",
+    "dev:docker:up:reset": "rm -R -f db && yarn dev:docker:up",
+    "dev:docker:down": "docker compose -f docker-compose.dev.yml --env-file .env.docker.dev down",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -108,7 +110,7 @@
     "jest": "^27.2.5",
     "lint-staged": "^11.2.6",
     "prettier": "^2.3.2",
-    "prisma": "3.8.1",
+    "prisma": "^3.10.0",
     "sql-formatter": "^4.0.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
