--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
     "dev": "NODE_ENV=development DEBUG=@neo4j/graphql:execute nest start --watch",
     "dev:docker:up": "docker compose -f docker-compose.dev.yml --env-file .env.docker.dev up",
     "dev:docker:up:reset": "rm -R -f db && yarn dev:docker:up",
