--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@nestjs/passport": "8.2.1",
     "@nestjs/platform-fastify": "^8.4.1",
     "@nestjs/schedule": "^1.1.0",
-    "@prisma/client": "3.8.1",
+    "@prisma/client": "^3.12.0",
     "@tracworx/nestjs-dataloader": "^1.1.0",
     "@types/date-fns": "^2.6.0",
     "algoliasearch": "^4.11.0",
@@ -111,9 +111,9 @@
     "jest": "^27.2.5",
     "lint-staged": "^11.2.6",
     "prettier": "^2.3.2",
-    "prisma": "^3.10.0",
-    "sql-formatter": "^4.0.2",
+    "prisma": "^3.12.0",
     "source-map-support": "^0.5.20",
+    "sql-formatter": "^4.0.2",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
