--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   db:
-    image: 'postgis/postgis:13-3.2-alpine'
+    image: 'postgres:13-alpine'
     container_name: db
     restart: unless-stopped
     environment:
