feat: get post events with tags (#226)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.codeActionsOnSave": {
         "source.fixAll": true
     },
-    "eslint.lintTask.enable": true
+    "eslint.lintTask.enable": true,
+    "typescript.preferences.importModuleSpecifier": "relative"
 }
