--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "neo4j-driver": "4.4.0-beta02",
     "nestjs-http-promise": "^1.2.1",
     "nestjs-i18n": "^8.2.2",
+    "p-all": "3.0.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "qs": "^6.10.2",
