--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "7.4.0",
     "twilio": "3.73.0",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "yoti": "^3.21.0"
   },
   "lint-staged": {
     "*.{js,ts}": [
