feat: new notifications (#237)

--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@aws-sdk/s3-request-presigner": "3.44.0",
     "@aws-sdk/signature-v4-crt": "3.41.0",
     "@mailchimp/mailchimp_transactional": "^1.0.46",
-    "@neo4j/graphql-ogm": "2.5.5",
     "@nestjs/apollo": "10.0.5",
     "@nestjs/cli": "8.2.1",
     "@nestjs/common": "8.3.1",
@@ -69,7 +68,6 @@
     "fastify": "^3.27.4",
     "graphql": "^15.6.1",
     "lodash": "^4.17.21",
-    "neo4j-driver": "4.4.0-beta02",
     "nestjs-http-promise": "^1.2.1",
     "nestjs-i18n": "^8.2.2",
     "p-all": "3.0.0",
@@ -110,6 +108,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-functional": "^4.2.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
     "jest": "^27.2.5",
     "lint-staged": "^11.2.6",
