--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@nestjs/cli": "8.2.1",
     "@nestjs/common": "8.3.1",
     "@nestjs/core": "8.3.1",
-    "@nestjs/graphql": "10.0.5",
+    "@nestjs/graphql": "^10.0.18",
     "@nestjs/jwt": "8.0.0",
     "@nestjs/passport": "8.2.1",
     "@nestjs/platform-fastify": "^8.4.1",
