--- a/package.json
+++ b/package.json
@@ -35,52 +35,53 @@
     "prisma:generate:watch": "npx prisma generate --watch"
   },
   "dependencies": {
-    "@amplitude/node": "^1.9.2",
-    "@anchan828/nest-bullmq": "^2.0.2",
-    "@aws-sdk/client-s3": "3.44.0",
-    "@aws-sdk/s3-request-presigner": "3.44.0",
-    "@aws-sdk/signature-v4-crt": "3.41.0",
-    "@mailchimp/mailchimp_transactional": "^1.0.46",
-    "@nestjs/apollo": "10.0.5",
-    "@nestjs/cli": "8.2.1",
-    "@nestjs/common": "8.3.1",
-    "@nestjs/core": "8.3.1",
-    "@nestjs/graphql": "^10.0.18",
-    "@nestjs/jwt": "8.0.0",
-    "@nestjs/passport": "8.2.1",
-    "@nestjs/platform-fastify": "^8.4.1",
-    "@prisma/client": "^4.0.0",
-    "@tracworx/nestjs-dataloader": "^1.1.0",
+    "@amplitude/node": "^1.10.2",
+    "@anchan828/nest-bullmq": "^2.0.9",
+    "@aws-sdk/client-s3": "3.168.0",
+    "@aws-sdk/s3-request-presigner": "3.168.0",
+    "@aws-sdk/signature-v4-crt": "3.168.0",
+    "@fastify/accepts": "^4.0.1",
+    "@mailchimp/mailchimp_transactional": "^1.0.47",
+    "@nestjs/apollo": "^10.1.0",
+    "@nestjs/cli": "9.1.2",
+    "@nestjs/common": "9.0.11",
+    "@nestjs/core": "9.0.11",
+    "@nestjs/graphql": "^10.1.1",
+    "@nestjs/jwt": "9.0.0",
+    "@nestjs/passport": "9.0.0",
+    "@nestjs/platform-express": "^9.0.11",
+    "@prisma/client": "^4.3.1",
+    "@tracworx/nestjs-dataloader": "^1.1.1",
     "@types/date-fns": "^2.6.0",
-    "algoliasearch": "^4.11.0",
+    "algoliasearch": "^4.14.2",
     "apollo-server": "^3.6.5",
     "apollo-server-core": "3.5.0",
-    "apollo-server-fastify": "^3.6.5",
-    "axios": "^0.24.0",
+    "apollo-server-express": "^3.10.2",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
-    "bullmq": "^1.86.7",
+    "bullmq": "^1.90.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "dataloader": "^2.0.0",
-    "date-fns": "2.25.0",
-    "dotenv": "14.2.0",
+    "dataloader": "^2.1.0",
+    "date-fns": "2.29.2",
+    "dotenv": "16.0.2",
     "expo-server-sdk": "^3.6.0",
-    "fastify": "^3.27.4",
-    "graphql": "^15.6.1",
+    "express": "^4.17.1",
+    "graphql": "^16.6.0",
     "lodash": "^4.17.21",
     "nanoid": "3.3.4",
-    "nestjs-http-promise": "^1.2.1",
-    "nestjs-i18n": "^8.2.2",
-    "p-all": "3.0.0",
-    "passport": "^0.4.0",
+    "nestjs-http-promise": "^2.0.0",
+    "nestjs-i18n": "^9.1.10",
+    "p-all": "4.0.0",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "qs": "^6.10.2",
+    "qs": "^6.11.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "7.4.0",
-    "twilio": "3.73.0",
-    "uuid": "8.3.2",
-    "yoti": "^3.21.0"
+    "rxjs": "7.5.6",
+    "twilio": "3.82.0",
+    "uuid": "9.0.0",
+    "yoti": "^3.22.0"
   },
   "lint-staged": {
     "*.{js,ts}": [
@@ -89,44 +90,44 @@
     ]
   },
   "devDependencies": {
-    "@amplitude/analytics-node": "^0.3.4",
-    "@commitlint/cli": "^14.1.0",
-    "@commitlint/config-conventional": "^14.1.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@amplitude/analytics-node": "^0.5.0",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@nestjs/schematics": "^9.0.3",
+    "@nestjs/testing": "^9.0.11",
     "@types/bcrypt": "^5.0.0",
-    "@types/cron": "^1.7.3",
-    "@types/google.maps": "^3.46.1",
-    "@types/jest": "^27.0.1",
-    "@types/lodash": "^4.14.178",
-    "@types/node": "^16.0.0",
+    "@types/cron": "^2.0.0",
+    "@types/google.maps": "^3.50.0",
+    "@types/jest": "^29.0.1",
+    "@types/lodash": "^4.14.185",
+    "@types/node": "^18.7.16",
     "@types/passport-jwt": "^3.0.6",
-    "@types/supertest": "^2.0.11",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.15.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "cross-env": "^7.0.3",
-    "eslint": "^8.11.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-functional": "^4.2.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint": "^8.23.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-functional": "^4.3.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "husky": "^7.0.4",
-    "jest": "^27.2.5",
-    "lint-staged": "^11.2.6",
-    "prettier": "^2.3.2",
-    "prisma": "^4.0.0",
-    "source-map-support": "^0.5.20",
-    "sql-formatter": "^4.0.2",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.8.1",
-    "tsconfig-paths": "^3.10.1",
+    "husky": "^8.0.1",
+    "jest": "^29.0.3",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "prisma": "^4.3.1",
+    "source-map-support": "^0.5.21",
+    "sql-formatter": "^10.6.0",
+    "supertest": "^6.2.4",
+    "ts-jest": "^29.0.0",
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
     "tsutils": "^3.21.0",
-    "typescript": "^4.7.3",
-    "webpack": "5.65.0"
+    "typescript": "^4.8.3",
+    "webpack": "5.74.0"
   },
   "jest": {
     "moduleFileExtensions": [
